cfn_benchmark/cfn_templates/matdue__aws-cf-templates/complex-examples/container-cluster-alb.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Fargate cluster for Docker containers plus application load balancer

Parameters:
  AccessLogRetentionTime:
    Description: The rentention time in days.
    Type: Number
    Default: 30  # 30 days should be enough to do analysis on log data; do not save forever, think of GDPR!
    AllowedValues: [1, 3, 5, 7, 14, 30, 60, 90, 120, 150, 180, 365, 400, 545, 731, 1827, 3653]
  Domain:
    Description: The domain where this load balancer should be reachable at.
    Type: String
  Route53HostedZone:
    Description: The Route53 hosted zone ID
    Type: String
  ParentVPCStack:
    Description: 'Stack name of parent VPC stack based on vpc/vpc-*azs.yaml template.'
    Type: String
  Project:
    Description: The project name.
    Type: String

Resources:
  LoadBalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group to allow the load balancer talking with applications
      VpcId:
        'Fn::ImportValue': !Sub '${ParentVPCStack}-VPC'

  LoadBalancerSecurityGroupSelfIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref LoadBalancerSecurityGroup
      IpProtocol: -1
      SourceSecurityGroupId: !Ref LoadBalancerSecurityGroup

  LoadBalancerSecurityGroupSelfEgress:
    Type: AWS::EC2::SecurityGroupEgress
    Properties:
      GroupId: !Ref LoadBalancerSecurityGroup
      IpProtocol: -1
      DestinationSecurityGroupId: !Ref LoadBalancerSecurityGroup

  LoadBalancerFirewall:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group for Load Balancer
      VpcId:
        'Fn::ImportValue': !Sub '${ParentVPCStack}-VPC'
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: ::/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIpv6: ::/0
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: ::/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIpv6: ::/0

  LoadBalancerAccessLogs:
    Type: AWS::S3::Bucket
    Properties:
      BucketEncryption:
        ServerSideEncryptionConfiguration:
          - ServerSideEncryptionByDefault:
              SSEAlgorithm: AES256
      PublicAccessBlockConfiguration:
        BlockPublicAcls: true
        BlockPublicPolicy: true
        IgnorePublicAcls: true
        RestrictPublicBuckets: true
      LifecycleConfiguration:
        Rules:
          - Id: !Sub 'Delete after ${AccessLogRetentionTime} days'
            Status: Enabled
            ExpirationInDays: !Ref AccessLogRetentionTime

  LoadBalancerAccessLogsPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref LoadBalancerAccessLogs
      PolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Action: 's3:PutObject'
            Resource: !Sub 'arn:aws:s3:::${LoadBalancerAccessLogs}/AWSLogs/${AWS::AccountId}/*'
            Principal:
              AWS: 'arn:aws:iam::054676820928:root'  # see https://docs.aws.amazon.com/elasticloadbalancing/latest/application/load-balancer-access-logs.html for valid accounts
          - Effect: Allow
            Action: 's3:PutObject'
            Resource: !Sub 'arn:aws:s3:::${LoadBalancerAccessLogs}/AWSLogs/${AWS::AccountId}/*'
            Principal:
              Service: delivery.logs.amazonaws.com
            Condition:
              StringEquals:
                's3:x-amz-acl': bucket-owner-full-control
          - Effect: Allow
            Action: 's3:GetBucketAcl'
            Resource: !Sub 'arn:aws:s3:::${LoadBalancerAccessLogs}'
            Principal:
              Service: delivery.logs.amazonaws.com
          - Effect: Deny
            Action: 's3:*'
            Resource:
              - !Sub 'arn:aws:s3:::${LoadBalancerAccessLogs}'
              - !Sub 'arn:aws:s3:::${LoadBalancerAccessLogs}/*'
            Condition:
              Bool:
                'aws:SecureTransport': 'false'
            Principal: '*'

  LoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      IpAddressType: dualstack
      Scheme: internet-facing
      SecurityGroups:
        - !GetAtt LoadBalancerFirewall.GroupId
        - !GetAtt LoadBalancerSecurityGroup.GroupId
      Subnets: !Split [',', {'Fn::ImportValue': !Sub '${ParentVPCStack}-SubnetsPublic'}]
      Type: application
      LoadBalancerAttributes:
        - Key: access_logs.s3.enabled
          Value: true
        - Key: access_logs.s3.bucket
          Value: !Ref LoadBalancerAccessLogs

  LoadBalancerListenerHttp:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: redirect
          RedirectConfig:
            Protocol: "HTTPS"
            Port: 443
            Host: "#{host}"
            Path: "/#{path}"
            Query: "#{query}"
            StatusCode: "HTTP_301"

  LoadBalancerListenerHttpsCertificate:
    Type: AWS::CertificateManager::Certificate
    Properties:
      DomainName: !Ref Domain
      DomainValidationOptions:
        - DomainName: !Ref Domain
          HostedZoneId: !Ref Route53HostedZone
      ValidationMethod: DNS

  LoadBalancerListenerHttps:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref LoadBalancer
      Port: 443
      Protocol: HTTPS
      SslPolicy: 'ELBSecurityPolicy-TLS-1-2-2017-01'
      Certificates:
        - CertificateArn: !Ref LoadBalancerListenerHttpsCertificate
      DefaultActions:
        - Order: 1
          Type: fixed-response
          FixedResponseConfig:
            ContentType: text/plain
            MessageBody: Not found
            StatusCode: 404

  FargateCluster:
    Type: AWS::ECS::Cluster
    Properties:
      CapacityProviders:
        - FARGATE
        - FARGATE_SPOT

  ApplicationTaskExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      Description: Provides access to other AWS service resources that are required to run Amazon ECS tasks
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
      Policies:
        - PolicyName: ECS-task-execution
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - 'ecr:GetAuthorizationToken'
                  - 'ecr:BatchCheckLayerAvailability'
                  - 'ecr:GetDownloadUrlForLayer'
                  - 'ecr:BatchGetImage'
                  - 'logs:CreateLogStream'
                  - 'logs:PutLogEvents'
                Resource: '*'

Outputs:
  LoadBalancerListener:
    Description: Listener of load balancer
    Value: !Ref LoadBalancerListenerHttps
    Export:
      Name: !Sub '${AWS::StackName}-LoadBalancerListener'
  ApplicationTaskExecutionRole:
    Description: ARN of role which allows ECS to run the application
    Value: !GetAtt ApplicationTaskExecutionRole.Arn
    Export:
      Name: !Sub '${AWS::StackName}-ApplicationTaskExecutionRole'
  FargateCluster:
    Description: ARN of Fargate cluster
    Value: !GetAtt FargateCluster.Arn
    Export:
      Name: !Sub '${AWS::StackName}-FargateCluster'
  LoadBalancerSecurityGroup:
    Description: Group ID of security group which allows the load balancer to connect to an application
    Value: !GetAtt LoadBalancerSecurityGroup.GroupId
    Export:
      Name: !Sub '${AWS::StackName}-LoadBalancerSecurityGroup'
  LoadBalancerDnsName:
    Description: DNS name of load balancer
    Value: !GetAtt LoadBalancer.DNSName
    Export:
      Name: !Sub '${AWS::StackName}-LoadBalancerDnsName'
  LoadBalancerCanonicalHostedZoneID:
    Description: Hosted zone of load balancer
    Value: !GetAtt LoadBalancer.CanonicalHostedZoneID
    Export:
      Name: !Sub '${AWS::StackName}-LoadBalancerCanonicalHostedZoneID'
